--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.wapmesquita</groupId>
 	<artifactId>java-diff-server-parent</artifactId>
-	<version>0.1</version>
+	<version>1.0-SNAPSHOT</version>
 	<properties>
 		<logback.version>1.0.1</logback.version>
 		<jersey.version>2.24.1</jersey.version>
