--- a/model/pom.xml
+++ b/model/pom.xml
@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>io.github.wapmesquita</groupId>
 	<artifactId>java-diff-server-model</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.2</version>
 	<name>Java Diff Server Model</name>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>io.github.wapmesquita</groupId>
 		<artifactId>java-diff-server-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>0.2</version>
 		<relativePath>../</relativePath>
 	</parent>
 
